--- a/README.adoc
+++ b/README.adoc
@@ -25,6 +25,7 @@ This is likely to go through a few more versions as it is used comprehensively.
 
 ==== Changelog
 
+- 2.4 - fixed an issue if no authNames were being provided, a List<dynamic> was created instead of a List<String>
 - 2.3 - this is a cleanup of the move to Dio based on pedantic feedback
 - 1.5 - fixed the pubspec.yaml 
 - 1.4 - added in serialization of outgoing data because Dart cannot serialize an enum using json.
@@ -42,7 +43,7 @@ To use it, do something like this:
           <dependency>
             <groupId>com.bluetrainsoftware.maven</groupId>
             <artifactId>openapi-dart-generator</artifactId>
-            <version>2.3</version>
+            <version>2.4</version>
           </dependency>
         </dependencies>
         <executions>
