--- a/README.adoc
+++ b/README.adoc
@@ -23,6 +23,7 @@ There is an article on Medium discussing https://medium.com/@irinasouthwell_220/
 
 ==== Changelog
 
+- 3.2 - introduces support for extra elements in the pubspec, import support, arbitrary part support and a fix for arrays of date times and dates
 - 3.1 - introduces support for the Kubernetes API in terms of compilation along with a considerable degree of support for the
 complexity of that API. It also reduces the code generated when no forms are used or forms are used but not json. It also supports
 the return of non-json data by just returning the string, allowing you to decode it. 
@@ -81,8 +82,59 @@ To use it, do something like this:
 We use the enablePostProcessFile because if it finds a FLUTTER environment variable, it 
 will run dartfmt on the generated files.
 
+==== Additional Properties
+
+Additional properties allow you to customise how code is generated and we honour 2 of them above the normal ones.
+
+- `pubspec-dependencies`: anything in this will be split on a command added to the dependencies section of your
+generated code.
+- `pubspec-dev-dependencies`: anything here will be added to the dev dependencies of your generated code.
+
+the normal ones include:
+
+----
+name: {{pubName}}
+version: {{pubVersion}}
+description: {{pubDescription}}
+----
+
+They are specified in the configuration above:
+
+            <configuration>
+              <output>${project.basedir}</output>
+              <inputSpec>${project.basedir}/target/mrapi/mr-api.yaml</inputSpec>
+              <generatorName>dart2-api</generatorName>
+              <enablePostProcessFile>true</enablePostProcessFile>
+                <additionalProperties>
+                  <additionalProperty>pubName=myapi</additionalProperty>
+                </additionalProperties>
+            </configuration>
+
+
+See the `src/it` project for more examples.
+
+==== Additional files
+
+You may need to use additional files - just add them to the project or add them via a dependency. You can use the
+`importMappings` section of the configuration to bring in any packages (internal or external) into the library
+definition. For example
+
+----
+<typeMappings>int-or-string=IntOrString</typeMappings>
+<importMappings>IntOrString=./int_or_string.dart</importMappings>
+----
+
+This will note anything that has `format: int-or-string` and map this to the class IntOrString and there will be an
+extra `part` import for it added to the library main. You must write this class to have the expected criteria from
+the rest of the library but it does allow you to support custom types. Again, an example of this is in `src/it`.
+
+==== Using dependencies to pull in apis from other artifacts
+
 We typically use the Dependency Plugin to copy the actual OpenAPI yaml file from a different
 project - such as in this case "mr-api".
+
+NOTE: you can also customise this using my https://github.com/ClearPointNZ/connect-java/tree/master/maven-plugins/merge-yaml-plugin[MergeYaml plugin] if you wish to merge apis together. If often do this
+for testing purposes. 
 
 ----
       <plugin>
