--- a/README.adoc
+++ b/README.adoc
@@ -23,11 +23,12 @@ There is an article on Medium discussing https://medium.com/@irinasouthwell_220/
 
 ==== Changelog
 
+- 3.4 - backed out some experimental features and exposed the serialization capabilities. fixed a NPE on the copyWith.
 - 3.3 - introduces feedback from Jpi & Brian Janssen around making all the LocalApi serializer calls static, so `toJson()`
 can be called by jsonEncode without introducing non-Dart-like complexity. Further, we introduce an experimental vendor
 extension on an operation called `x-dart-rich-operationId` - this has to be another operation id, not the same as `operationId:`
 as Dart cannot have two functions with different return types. It will give you the same method signature, but return the
-deserialized object, the headers and the status code. It does not intefere with the existing code generation and was introduced
+deserialized object, the headers and the status code. It does not interfere with the existing code generation and was introduced
 to allow situations where session data is being returned outside of the body. It will be documented further once accepted.
 - 3.2 - introduces support for extra elements in the pubspec, import support, arbitrary part support and a fix for arrays of date times and dates
 - 3.1 - introduces support for the Kubernetes API in terms of compilation along with a considerable degree of support for the
