--- a/README.adoc
+++ b/README.adoc
@@ -23,6 +23,7 @@ There is an article on Medium discussing https://medium.com/@irinasouthwell_220/
 
 ==== Changelog
 
+- 3.5 - resolved an issue where class level variables were being duplicated from the parent, causing equals to fail
 - 3.4 - backed out some experimental features and exposed the serialization capabilities. fixed a NPE on the copyWith.
 - 3.3 - introduces feedback from Jpi & Brian Janssen around making all the LocalApi serializer calls static, so `toJson()`
 can be called by jsonEncode without introducing non-Dart-like complexity. Further, we introduce an experimental vendor
@@ -65,7 +66,7 @@ To use it, do something like this:
           <dependency>
             <groupId>com.bluetrainsoftware.maven</groupId>
             <artifactId>openapi-dart-generator</artifactId>
-            <version>3.3</version>
+            <version>3.5</version>
           </dependency>
         </dependencies>
         <executions>
