--- a/README.adoc
+++ b/README.adoc
@@ -1,18 +1,7 @@
 = Opinionated Dart OpenAPI v3 Plugin
 
-This plugin is designed for use by the OpenAPi v3 Maven Plugin and
-generates Dart code. It differs from the one built in because it does not
-generate a few files which I don't think should be generated (as they will get
-overwritten each time - such as .gitignore, travis.yml, etc), and behaves in a weird
-way with some things (such as enums) which I didn't agree with.
-
-It also significantly splits out all of the client api code into Browser and CLI versions
-so that it can be used with Flutter for Web, or plain Dart/Flutter Mobile (using Dart IO) without
-having to generate two completely different projects. 
-
-It also cleans up a bunch of code around streamed data handling.
-
-This is likely to go through a few more versions as it is used comprehensively.
+This plugin was originally designed for use by the OpenAPi v3 Maven Plugin, but works with the
+command line generator and the Gradle plugin. it generates _excellent_ Dart code and uses Dio.
 
 There is an article on Medium discussing https://medium.com/@irinasouthwell_220/accelerate-flutter-development-with-openapi-and-dart-code-generation-1f16f8329a6a[this plugin].
 
@@ -23,6 +12,7 @@ There is an article on Medium discussing https://medium.com/@irinasouthwell_220/
 
 ==== Changelog
 
+- 3.7 - resolved an issue with inline enums - thanks to Robert of https://github.com/BlackBeltTechnology
 - 3.5 - resolved an issue where class level variables were being duplicated from the parent, causing equals to fail
 - 3.4 - backed out some experimental features and exposed the serialization capabilities. fixed a NPE on the copyWith.
 - 3.3 - introduces feedback from Jpi & Brian Janssen around making all the LocalApi serializer calls static, so `toJson()`
@@ -48,12 +38,14 @@ by user. Fix issue with form data generation where fields need to be json encode
 
 ==== Roadmap
 
+- Once 5.0 comes out we will support it with a new major revision. It has _breaking API changes_ and will *not* work now.
 - We intend to support the `oneOf` syntax for parameters for request and response types by using optional parameters. This
 won't change method calls when you are only passing one type.
 - We will start investigating how to support `anyOf` syntax. 
+- We will wrap exceptions that have generated models
 - We intend to be generating server side code for supporting Dart server side applications. 
 
-=== Usage
+=== Usage in Maven
 
 To use it, do something like this:
 
@@ -66,7 +58,7 @@ To use it, do something like this:
           <dependency>
             <groupId>com.bluetrainsoftware.maven</groupId>
             <artifactId>openapi-dart-generator</artifactId>
-            <version>3.6</version>
+            <version>3.7</version>
           </dependency>
         </dependencies>
         <executions>
@@ -90,6 +82,43 @@ To use it, do something like this:
 We use the enablePostProcessFile because if it finds a FLUTTER environment variable, it 
 will run dartfmt on the generated files.
 
+=== Usage in Gradle
+
+In Gradle, you have to make this extra library available to the buildscript, so at the top of your file before
+your plugin declaration you need a section similar to:
+
+----
+buildscript {
+	repositories {
+		mavenLocal()
+		mavenCentral()
+	}
+	dependencies {
+		classpath "com.bluetrainsoftware.maven:openapi-dart-generator:3.7"
+	}
+}
+----
+
+from there in your openApiGenerator definitions, you specify the server format in additional properties:
+
+----
+openApiGenerate {
+    generatorName = "dart2-api"
+    inputSpec = openApiSpec
+    outputDir = openApiOutputDir
+    apiPackage = "com.your-company.api"
+    modelPackage = "com.your-company.api.model"
+	  additionalProperties = [
+	    'key': 'value'
+	  ]
+    configOptions = [:]
+}
+----
+
+=== Usage from the command line
+
+Please refer to Irina's article https://medium.com/@irinasouthwell_220/accelerate-flutter-development-with-openapi-and-dart-code-generation-1f16f8329a6a[on Medium].
+
 ==== Additional Properties
 
 Additional properties allow you to customise how code is generated and we honour 2 of them above the normal ones.
@@ -106,18 +135,20 @@ version: {{pubVersion}}
 description: {{pubDescription}}
 ----
 
-They are specified in the configuration above:
+They are specified in the configuration above (Maven example here):
 
-            <configuration>
-              <output>${project.basedir}</output>
-              <inputSpec>${project.basedir}/target/mrapi/mr-api.yaml</inputSpec>
-              <generatorName>dart2-api</generatorName>
-              <enablePostProcessFile>true</enablePostProcessFile>
-                <additionalProperties>
-                  <additionalProperty>pubName=myapi</additionalProperty>
-                </additionalProperties>
-            </configuration>
-
+[source,xml]
+----
+<configuration>
+  <output>${project.basedir}</output>
+  <inputSpec>${project.basedir}/target/mrapi/mr-api.yaml</inputSpec>
+  <generatorName>dart2-api</generatorName>
+  <enablePostProcessFile>true</enablePostProcessFile>
+    <additionalProperties>
+      <additionalProperty>pubName=myapi</additionalProperty>
+    </additionalProperties>
+</configuration>
+----
 
 See the `src/it` project for more examples.
 
