--- a/README.adoc
+++ b/README.adoc
@@ -22,6 +22,9 @@ and use the `openapi_migrate` tool on your code. Its likely you will need to run
 to move your whole project to null safety, you will be able to regenerate your API with the additionalProperty flags and then do the normal
 `dart migrate` process. We are doing this with our codebase over at FeatureHub (https://featurehub.io).
 
+Another significant departure for 5.0 is that it enforces return vaulues - you cannot return a status code from an API that is not declared in
+your OpenAPI.
+
 - 4.2 - if you directly use the Type Transformers for enums, this is a breaking change. They have changed to extensions
 and have been slightly remodeled based on Robert's inlining work. The whole deserialisation mechanism has changed particluarly
 for lists and maps because it wasn't able to cope more than one level deep with lists and maps (issue #19). The date
