--- a/README.adoc
+++ b/README.adoc
@@ -15,6 +15,8 @@ This is a product of http://featurehub.io
 
 ==== Changelog
 
+- 5.2 - this version addresses issues with complex codegen. It assumes that by default List and Map entries will be non null for
+null safe support. 
 - 5.1 - this addresses the issues of a non-required POST body. It does not address the issue of complex tree structures of models as yet,
 this will come in 5.2.
 - 5.0 - is a significant departure and you will need to use the public Dart tool to migrate your code https://pub.dev/packages/openapi_migrate/versions/1.0.0
