List<AnyOf<*>> support (#26)
+nullSafe
+ add enum class for discriminator
+ hide feature behind listAnyOf additional property flag
+ add setter for value along with discriminator field
+ fix _array_copy for NNBD when array is optional
+ nullsafe hashcode calculation
+ update openapi-codegen-version
+ test package generation
+ make it work under SampleRunner
+ add scenarios to k8s**

--- a/README.adoc
+++ b/README.adoc
@@ -296,3 +296,13 @@ behind as you generate.
       </plugin>
 ----
 
+=== Testing
+
+To test locally you can run tests by invoking this command:
+
+[source,bash]
+----
+mvn -Dmaven.wagon.http.retryHandler.count=5 --batch-mode verify
+----
+
+The source for the tests is located in src/k8s** folders. The generated test output will be in target/it/k8s**.
