clawed back the json inline objects, not easy!

--- a/README.adoc
+++ b/README.adoc
@@ -268,8 +268,7 @@ The source for the tests is located in src/k8s** folders. The generated test out
 ==== Changelog
 
 - 5.5 - this is a release focused on form, multi-part uploads, file uploads and downloads and enhancing the parameters as lodged in
-a couple of tickets. DO NOT UPGRADE if you are using complex non-named JSON bodies in your requestBodies - *please* move your non-form objects into the `#/components/schemas` section if you are using complex json bodies. This is an _extremely_ bad API smell and as this is an opinionated
-generator, I need to remove this support, you should not be using classes called "InlineObject1" and "InlineOBject2".  
+a couple of tickets. This release deletes unused models from Inline form models.
 - 5.4 - change the equals method to use a local variable called `__other` instead of `other` as when a class had an `other`
 property,  the equals would break.
 - 5.3 - AnyOf support contribution by Łukasz Wiśniewski (https://github.com/vishna) and a resolution of the application/octet-stream issue
